# coffee-bean-detection

./: .gitignore  README.md  pyproject.toml
configs/: A0_yolo26n_real.yaml  A0_yolo26n_screen.yaml  A1_yolo26n_naive_copy_paste.yaml  A1_yolo26n_screen.yaml  A2_yolo26n_screen.yaml  A2_yolo26n_vadcp.yaml  D0_yolo26n.yaml  Y0_yolo11n.yaml  Y1_yolo11n_local_hbp.yaml
docs/: PROTOCOL.md  SNI_300G_COPY_PASTE.md  VA_DCP_IMPLEMENTATION.md
notebooks/: SNI_300g_CopyPaste_Preview_Colab.ipynb  VA_DCP_Setup_Colab.ipynb  VA_DCP_Train_Colab.ipynb
src/coffee_detector/: __init__.py  archive_vadcp.py  audit_dataset.py  audit_vadcp.py  audit_vadcp_realism.py  dataset.py  evaluate.py  evaluate_visibility.py  generate_vadcp_dataset.py  hf_sync.py  prepare_dataset.py  prepare_object_library.py  profile_vadcp_source.py  run_baseline.py  run_cutout_visual_audit.py  run_screening.py  run_sni_spread_preview.py  run_vadcp_ablation.py  run_vadcp_visual_audit.py  run_visual_audit.py  train.py
src/coffee_detector/models/: __init__.py  local_hbp.py
src/coffee_detector/vadcp/: __init__.py  compositor.py  library.py  masks.py  profile.py  types.py
tests/: test_archive_vadcp.py  test_baseline.py  test_dataset.py  test_hf_sync.py  test_local_hbp.py  test_screening.py  test_vadcp.py  test_vadcp_ablation.py  test_visual_audit.py
